# RAGApp

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ragapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models_bootstrap/: manifest.json
app/src/main/cpp/: CMakeLists.txt  dummy.cpp  llamabridge.cpp
app/src/main/java/com/example/ragapp/: LLamaBridge.kt  MainActivity.kt
app/src/main/java/com/example/ragapp/modelprep/: ChecksumUtil.kt  Manifest.kt  ModelPreparer.kt  SplashViewModel.kt
app/src/main/java/com/example/ragapp/ui/splash/: SplashScreen.kt
app/src/main/java/com/example/ragapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/model/: ChatModels.kt
app/src/main/java/ui/chat/: ChatInputBar.kt  ChatScreen.kt  ChatViewModel.kt  MessageBubble.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/ragapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
